# CodeWitch

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  setup.py
examples/: cc.yaml.example  codex.yaml.example
src/: __main__.py  codex_manager.py  commands.py  config.py  env_manager.py  utils.py
tests/: test_codex_manager.py  test_commands.py  test_config.py  test_env_manager.py  test_utils.py
tests/fixtures/: sample_cc.yaml  sample_settings.json
