[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codewitch"
version = "0.1.0"
description = "Claude Code environment switcher CLI"
readme = "README.md"
requires-python = ">=3.7"
authors = []
license = {text = "MIT"}
keywords = ["claude", "claude-code", "environment", "cli"]

dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[project.scripts]
cw = "src.commands:app"

[project.urls]
Homepage = "https://github.com/username/codewitch"  # TODO: Update with actual URL